samples/SalesforceFoundation/Contacts_and_Organizations/src/objects/Contacts_And_Orgs_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Application settings for the Contacts and Organizations package of the Nonprofit Success Pack</description>
    <fields>
        <fullName>Account_Processor__c</fullName>
        <defaultValue>&quot;Household Account&quot;</defaultValue>
        <description>Setting for the Account model. Should be &quot;Household Account&quot;, &quot;One-to-One&quot;, or &quot;Individual&quot;. Replaces the custom field Contact.SystemAccountProcessor__c.  &quot;Household Account&quot; is the recommended model.</description>
        <inlineHelpText>Setting for the Account model. Should be &quot;Household Account&quot;, &quot;One-to-One&quot;, or &quot;Individual&quot;. Replaces the custom field Contact.SystemAccountProcessor__c.  &quot;Household Account&quot; is the recommended model.</inlineHelpText>
        <label>Account Model</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DISABLE_IndividualAccounts_trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>DEPRECATED.  Trigger behavior now controlled in the Trigger Configuration page of NPSP Settings.</description>
        <inlineHelpText>DEPRECATED.  Trigger behavior now controlled in the Trigger Configuration page of NPSP Settings.</inlineHelpText>
        <label>DEPRECATED-Disable_IndividualAcc_trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DISABLE_OpportunityAccount_trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>DEPRECATED.  Trigger behavior now controlled in the Trigger Configuration page of NPSP Settings.</description>
        <inlineHelpText>DEPRECATED.  Trigger behavior now controlled in the Trigger Configuration page of NPSP Settings.</inlineHelpText>
        <label>DEPRECATED-Disable_OppAccount_trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DISABLE_OpportunityContactRoles_trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>DEPRECATED.  Trigger behavior now controlled in the Trigger Configuration page of NPSP Settings.</description>
        <inlineHelpText>DEPRECATED.  Trigger behavior now controlled in the Trigger Configuration page of NPSP Settings.</inlineHelpText>
        <label>DEPRECATED-Disable_OCR_trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DISABLE_OpportunityPayments_trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>DEPRECATED.  Trigger behavior now controlled in the Trigger Configuration page of NPSP Settings.</description>
        <inlineHelpText>DEPRECATED.  Trigger behavior now controlled in the Trigger Configuration page of NPSP Settings.</inlineHelpText>
        <label>DEPRECATED-Disable_OppPayments_trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Default_Opp_on_Convert__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specifies whether to create an Opportunity during Lead conversion.</description>
        <inlineHelpText>Specifies whether to create an Opportunity during Lead conversion.</inlineHelpText>
        <label>Create Opportunity on Lead Convert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disable_Account_Model_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>DEPRECATED.  Trigger behavior now controlled in the Trigger Configuration page of NPSP Settings.</description>
        <inlineHelpText>DEPRECATED.  Trigger behavior now controlled in the Trigger Configuration page of NPSP Settings.</inlineHelpText>
        <label>DEPRECATED-Disable Account Model Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Opportunity_Contact_Role_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>DEPRECATED.  Trigger behavior now controlled in the Trigger Configuration page of NPSP Settings.</description>
        <inlineHelpText>DEPRECATED.  Trigger behavior now controlled in the Trigger Configuration page of NPSP Settings.</inlineHelpText>
        <label>DEPRECATED-Enable OppContactRole Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Update_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <description>DEPRECATED.  New versions of the Nonprofit Success Pack will be automatically installed.</description>
        <inlineHelpText>DEPRECATED.  New versions of the Nonprofit Success Pack will be automatically installed.</inlineHelpText>
        <label>DEPRECATED-Enable Update Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HH_Account_RecordTypeID__c</fullName>
        <description>The ID of the Account Record Type to be used for Household Accounts. If none is selected, the Account will default to the user&apos;s default Account Record Type.</description>
        <inlineHelpText>The ID of the Account Record Type to be used for Household Accounts. If none is selected, the Account will default to the user&apos;s default Account Record Type.</inlineHelpText>
        <label>Household Account Record Type</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Has_Package_Update__c</fullName>
        <description>DEPRECATED.  New versions of the Nonprofit Success Pack will be automatically installed.</description>
        <inlineHelpText>DEPRECATED.  New versions of the Nonprofit Success Pack will be automatically installed.</inlineHelpText>
        <label>DEPRECATED-Has Package Update</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Update_Check__c</fullName>
        <description>DEPRECATED.  New versions of the Nonprofit Success Pack will be automatically installed.</description>
        <inlineHelpText>DEPRECATED.  New versions of the Nonprofit Success Pack will be automatically installed.</inlineHelpText>
        <label>DEPRECATED-Last Update Check</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Max_Package_Version__c</fullName>
        <description>DEPRECATED.  New versions of the Nonprofit Success Pack will be automatically installed.</description>
        <inlineHelpText>DEPRECATED.  New versions of the Nonprofit Success Pack will be automatically installed.</inlineHelpText>
        <label>DEPRECATED-Max Package Version</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>One_to_One_RecordTypeID__c</fullName>
        <description>The ID of the Account Record Type to be used for One-to-One Accounts.  If none is selected, the Account will default to the user&apos;s default Account Record Type.</description>
        <inlineHelpText>The ID of the Account Record Type to be used for One-to-One Accounts.  If none is selected, the Account will default to the user&apos;s default Account Record Type.</inlineHelpText>
        <label>One-to-One Record Type</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Contact_Role_Default_role__c</fullName>
        <description>The default Contact Role automatically assigned to the Primary Contact for the Opportunity.</description>
        <inlineHelpText>The default Contact Role automatically assigned to the Primary Contact for the Opportunity.</inlineHelpText>
        <label>Default Opportunity Contact Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Package_Update_URL__c</fullName>
        <description>DEPRECATED.  New versions of the Nonprofit Success Pack will be automatically installed.</description>
        <inlineHelpText>DEPRECATED.  New versions of the Nonprofit Success Pack will be automatically installed.</inlineHelpText>
        <label>DEPRECATED-Package Update URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Payments_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If enabled, Salesforce automatically creates Payments for new Opportunities (Donations).</description>
        <inlineHelpText>If enabled, Salesforce automatically creates Payments for new Opportunities (Donations).</inlineHelpText>
        <label>Automatic Payment Creation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Update_Check_Interval__c</fullName>
        <defaultValue>90</defaultValue>
        <description>DEPRECATED.  New versions of the Nonprofit Success Pack will be automatically installed.</description>
        <inlineHelpText>DEPRECATED.  New versions of the Nonprofit Success Pack will be automatically installed.</inlineHelpText>
        <label>DEPRECATED-Update Check Interval</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Contacts And Orgs Settings</label>
</CustomObject>